base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: budget-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: track-your-budget.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: frontend-service
             port:
               number: 80
